microservices/billing-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: billing-service
  labels:
    app: billing-service
spec:
  type: ClusterIP
  selector:
    app: billing-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: None
